azure/repind-repind/msv/cf/provide-identification-data/kubernetes/prd/replica-extra-options.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provide-identification-data
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    spec:
      imagePullSecrets:
        - name: cdm-vlb-prd-harbor-pull
